2023-07-13T16:11:04Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/andry81-devops/actions/runs/5545398783 # 1003
* notice: Stats Output Repository: https://github.com/andry81-stats/gh-workflow--gh-stats/commits?branch=master&time_zone=utc&until=2023-07-13
* notice: last 14d: unq all: 42 5359
* notice: prev accum: outdated-unq outdated-all / unq all: 1487 137653 / 1572 143247
* notice: next accum: outdated-unq outdated-all / unq all: 1487 137653 / 1572 143341
* notice: prev exec diff / last date diff / accum: unq all: +0 +94 -1 -139 / +3 +205 -0 -0 / 3 205
* notice: removed / changed dates: [] / [2023-06-29 2023-07-13]

2023-07-13T08:11:22Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/andry81-devops/actions/runs/5540676816 # 1002
* notice: Stats Output Repository: https://github.com/andry81-stats/gh-workflow--gh-stats/commits?branch=master&time_zone=utc&until=2023-07-13
* notice: last 14d: unq all: 42 5404
* notice: prev accum: outdated-unq outdated-all / unq all: 1487 137653 / 1569 143136
* notice: next accum: outdated-unq outdated-all / unq all: 1487 137653 / 1572 143247
* notice: prev exec diff / last date diff / accum: unq all: +3 +111 -1 -163 / +3 +111 -0 -0 / 3 111
* notice: removed / changed dates: [] / [2023-06-29 2023-07-13]

2023-07-13T00:54:26Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/andry81-devops/actions/runs/5537895404 # 1001
* notice: Stats Output Repository: https://github.com/andry81-stats/gh-workflow--gh-stats/commits?branch=master&time_zone=utc&until=2023-07-13
* notice: last 14d: unq all: 43 5456
* notice: prev accum: outdated-unq outdated-all / unq all: 1485 137263 / 1568 143042
* notice: next accum: outdated-unq outdated-all / unq all: 1487 137653 / 1569 143136
* notice: prev exec diff / last date diff / accum: unq all: +1 +94 -0 -27 / +3 +300 -0 -0 / 3 300
* notice: removed / changed dates: [2023-06-28] / [2023-06-29 2023-07-12]

2023-07-12T16:10:47Z: