@@ -1,8 +1,8 @@
 {
-  "timestamp" : "2023-07-01T00:57:50Z",
-  "count" : 391,
+  "timestamp" : "2023-07-14T00:54:01Z",
+  "count" : 364,
   "count_minmax" : [ 134, 391 ],
-  "count_decinc" : [ -0, +391 ],
+  "count_decinc" : [ -27, +391 ],
   "uniques" : 2,
   "uniques_minmax" : [ 2, 2 ],
   "uniques_decinc" : [ -0, +2 ]
