@@ -1,8 +1,8 @@
 {
-  "timestamp" : "2023-07-13T16:11:04Z",
-  "count" : 205,
-  "count_minmax" : [ 111, 205 ],
-  "count_decinc" : [ -0, +205 ],
+  "timestamp" : "2023-07-14T00:54:01Z",
+  "count" : 298,
+  "count_minmax" : [ 111, 298 ],
+  "count_decinc" : [ -0, +298 ],
   "uniques" : 3,
   "uniques_minmax" : [ 3, 3 ],
   "uniques_decinc" : [ -0, +3 ]
