@@ -1,24 +1,15 @@
 {
-  "timestamp" : "2023-07-13T16:11:04Z",
-  "count_outdated" : 137653,
-  "uniques_outdated" : 1487,
-  "count" : 143341,
+  "timestamp" : "2023-07-14T00:54:01Z",
+  "count_outdated" : 138044,
+  "uniques_outdated" : 1490,
+  "count" : 143434,
   "uniques" : 1572,
   "clones" : [
     {
-      "timestamp": "2023-06-29T00:00:00Z",
-      "count": 62,
-      "count_minmax": [ 62, 391 ],
-      "count_decinc": [ 329, 391 ],
-      "uniques": 1,
-      "uniques_minmax": [ 1, 3 ],
-      "uniques_decinc": [ 2, 3 ]
-    },
-    {
       "timestamp": "2023-06-30T00:00:00Z",
-      "count": 391,
+      "count": 364,
       "count_minmax": [ 134, 391 ],
-      "count_decinc": [ 0, 391 ],
+      "count_decinc": [ 27, 391 ],
       "uniques": 2,
       "uniques_minmax": [ 2, 2 ],
       "uniques_decinc": [ 0, 2 ]
@@ -133,9 +124,9 @@
     },
     {
       "timestamp": "2023-07-13T00:00:00Z",
-      "count": 205,
-      "count_minmax": [ 111, 205 ],
-      "count_decinc": [ 0, 205 ],
+      "count": 298,
+      "count_minmax": [ 111, 298 ],
+      "count_decinc": [ 0, 298 ],
       "uniques": 3,
       "uniques_minmax": [ 3, 3 ],
       "uniques_decinc": [ 0, 3 ]
