@@ -1,15 +1,10 @@
 {
-  "count": 5359,
+  "count": 5363,
   "uniques": 42,
   "clones": [
     {
-      "timestamp": "2023-06-29T00:00:00Z",
-      "count": 62,
-      "uniques": 1
-    },
-    {
       "timestamp": "2023-06-30T00:00:00Z",
-      "count": 391,
+      "count": 364,
       "uniques": 2
     },
     {
@@ -74,7 +69,7 @@
     },
     {
       "timestamp": "2023-07-13T00:00:00Z",
-      "count": 205,
+      "count": 298,
       "uniques": 3
     }
   ]
