@@ -1,3 +1,12 @@
+2023-07-14T00:54:01Z:
+* notice: GitHub Actions Run: https://github.com/andry81-devops/andry81-devops/actions/runs/5549315521 # 1004
+* notice: Stats Output Repository: https://github.com/andry81-stats/gh-workflow--gh-stats/commits?branch=master&time_zone=utc&until=2023-07-14
+* notice: last 14d: unq all: 42 5363
+* notice: prev accum: outdated-unq outdated-all / unq all: 1487 137653 / 1572 143341
+* notice: next accum: outdated-unq outdated-all / unq all: 1490 138044 / 1572 143434
+* notice: prev exec diff / last date diff / accum: unq all: +0 +93 -0 -27 / +3 +298 -0 -0 / 3 298
+* notice: removed / changed dates: [2023-06-29] / [2023-06-30 2023-07-13]
+
 2023-07-13T16:11:04Z:
 * notice: GitHub Actions Run: https://github.com/andry81-devops/andry81-devops/actions/runs/5545398783 # 1003
 * notice: Stats Output Repository: https://github.com/andry81-stats/gh-workflow--gh-stats/commits?branch=master&time_zone=utc&until=2023-07-13
